# FastNote

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json
docs/: TODO.md  ui_design.html  需求文档.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  FileTree.tsx  SearchDialog.tsx  Toolbar.tsx  WelcomeScreen.tsx  milkdown.css
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  scroll-area.tsx
src/i18n/: context.tsx  translations.ts
src/stores/: vaultStore.ts
src/types/: index.ts
