[package]
name = "fastnote"
version = "0.1.0"
description = "A minimal local Markdown note-taking app"
authors = ["FastNote"]
edition = "2021"

[lib]
name = "fastnote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
